[BUGFIX] Reintroduce language label for new application button

--- a/Resources/Private/Language/de.locallang_mod.xlf
+++ b/Resources/Private/Language/de.locallang_mod.xlf
@@ -76,6 +76,9 @@
 			<trans-unit id="application.text">
 				<target>Neu erstellte Applikationen werden hier gespeichert:</target>
 			</trans-unit>
+			<trans-unit id="application.new">
+				<source>Neue Applikation erstellen</source>
+			</trans-unit>
 
 			<trans-unit id="list.title">
 				<target>Auth0</target>
