--- a/Resources/Private/Language/Database.xlf
+++ b/Resources/Private/Language/Database.xlf
@@ -39,13 +39,16 @@
 				<source>Client Secret</source>
 			</trans-unit>
 			<trans-unit id="tx_auth0_domain_model_application.domain">
-				<source>Domain</source>
+				<source>Domain / Auth0 Tenant</source>
 			</trans-unit>
 			<trans-unit id="tx_auth0_domain_model_application.audience">
 				<source>Audience</source>
 			</trans-unit>
 			<trans-unit id="tx_auth0_domain_model_application.single_log_out">
 				<source>Single Log Out</source>
+			</trans-unit>
+			<trans-unit id="tx_auth0_domain_model_application.api">
+				<source>Use API</source>
 			</trans-unit>
 			<trans-unit id="tx_auth0_domain_model_application.secret_base64_encoded">
 				<source>Client Secret Base64 Encoded</source>
@@ -59,6 +62,12 @@
 			</trans-unit>
 			<trans-unit id="tabs.features">
 				<source>Features</source>
+			</trans-unit>
+			<trans-unit id="palettes.api">
+				<source>Auth0 (Management) API</source>
+			</trans-unit>
+			<trans-unit id="palettes.client">
+				<source>Client Configuration</source>
 			</trans-unit>
 
 			<trans-unit id="fe_users.tx_extbase_type.Tx_Auth0_FrontendUser">
