--- a/Resources/Private/Language/de.Database.xlf
+++ b/Resources/Private/Language/de.Database.xlf
@@ -64,10 +64,10 @@
 				<target>Features</target>
 			</trans-unit>
 			<trans-unit id="palettes.api">
-				<source>Auth0 (Management) API</source>
+				<target>Auth0 (Management) API</target>
 			</trans-unit>
 			<trans-unit id="palettes.client">
-				<source>Klient Konfiguration</source>
+				<target>Klient Konfiguration</target>
 			</trans-unit>
 
 			<trans-unit id="fe_users.tx_extbase_type.Tx_Auth0_FrontendUser">
